feat(admin): add function get admins
