# transport/admin.go
@@ -10,10 +10,44 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// GetAdmins godoc
+// @Summary      List admins
+// @Description  Retrieves a list of admins based on filter criteria
+// @Tags         admins
+// @Accept       json
+// @Produce      json
+// @Param        request  query     request.GetAdminsRequest  true  "Filter Criteria"
+// @Success      200      {object}  response.PaginationDataResponse
+// @Failure      400      {object}  response.MessageAPIResponse "Invalid data. Please try again."
+// @Failure      500      {object}  response.MessageAPIResponse "There is something wrong in the system during the process. Please try again later."
+// @Router       /admins [get]
+func GetAdmins(ctx *gin.Context) {
+	var request request.GetAdminsRequest
+	if ctx.ShouldBindQuery(&request) != nil {
+		util.ProcessResponse(util.GenerateInvalidRequestAndSystemProblemModel(ctx, nil))
+		return
+	}
+
+	service, err := business.GenerateAdminService()
+	if err != nil {
+		util.ProcessResponse(util.GenerateInvalidRequestAndSystemProblemModel(ctx, err))
+		return
+	}
+
+	res, err := service.GetAdmins(request, ctx)
+	util.ProcessResponse(response.APIResponse{
+		Data1:    res,
+		Data2:    res,
+		ErrMsg:   err,
+		Context:  ctx,
+		PostType: action_type.NON_POST,
+	})
+}
+
 // UpdatePublisherInfo godoc
 // @Summary      Update publisher information
 // @Description  Updates the details of publisher (admin) based on the provided request body with just only 1 call permitted.
-// @Tags         admin
+// @Tags         admins
 // @Accept       json
 // @Produce      json
 // @Security     BearerAuth
